--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -10,12 +10,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v2
       - name: Install Python 3
         uses: actions/setup-python@v1
         with:
-          python-version: 3.6
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -23,4 +26,4 @@ jobs:
           pip install -r requirements.txt
           pip install -e .
       - name: Run tests with pytest
-        run: pytest 
+        run: pytest
