--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -25,5 +25,8 @@ jobs:
           pip install pytest
           pip install -r requirements.txt
           pip install -e .
+          wget --no-check-certificate https://biolinux2.wustl.edu/hlabdata/data/Headstages_512_Channels_int16_2021-06-08_11-08-03.bin -P tests/
+          wget --no-check-certificate https://biolinux2.wustl.edu/hlabdata/data/timestamp.csv -P tests/
+          wget --no-check-certificate https://biolinux2.wustl.edu/hlabdata/data/data.csv -P tests/
       - name: Run tests with pytest
-        run: pytest
+        run: pytest 
