--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -18,7 +18,11 @@ jobs:
       - name: Install Python 3
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python-version }}       
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libhdf5-dev
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
